fixed } cutting off end of file

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1583,24 +1583,24 @@ footer.l-footer.row {
         width: 80%;
         @include main-outer-shadowbox();
     }
-        
-        
+
+
 //        width: 100%;
 //        position: relative;
 //        bottom: 2px;
 //        height: 55px;
 //        padding: 0px;
 //        margin: 0px;
-        /* background: #002255; */
-        color: white;
-        text-align: center;
-        border-bottom: 1px solid #002255; 
-        div {
-            padding: 10px 0px;
-            background: $navy;
-        }
+    /* background: #002255; */
+    color: white;
+    text-align: center;
+    border-bottom: 1px solid #002255; 
+    div {
+        padding: 10px 0px;
+        background: $navy;
     }
 }
+
 
 
 
